--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "vintepila_gen_html"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-kivy = "^2.3.0"
+pyqt6 = "^6.7.0"
 
 
 [build-system]
